# PiCamera

server/: CMakeLists.txt  MyServer.cpp  MyServer.h  MyServer1.cpp  MyServer1.h  MyThread.cpp  MyThread.h  README.md  main.cpp  sensor.cpp  sensor.h
